<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/app_navigation"
    app:startDestination="@+id/navigation_login">

    <fragment
        android:id="@+id/navigation_login"
        android:name="com.camelloncase.assessment.ui.login.LoginFragment"
        android:label="@string/title_login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_navigation_login_to_navigation_register"
            app:destination="@id/navigation_register" />
        <action
            android:id="@+id/action_navigation_login_to_navigation_recover"
            app:destination="@id/navigation_recover" />
        <action
            android:id="@+id/action_navigation_login_to_notesFragment"
            app:destination="@id/navigation_notes" />
    </fragment>
    <fragment
        android:id="@+id/navigation_register"
        android:name="com.camelloncase.assessment.ui.register.RegisterFragment"
        android:label="@string/title_register"
        tools:layout="@layout/fragment_register" >
        <action
            android:id="@+id/action_navigation_register_to_navigation_login"
            app:destination="@id/navigation_login" />
    </fragment>
    <fragment
        android:id="@+id/navigation_recover"
        android:name="com.camelloncase.assessment.ui.recover.RecoverFragment"
        android:label="@string/title_recover"
        tools:layout="@layout/fragment_recover" >
        <action
            android:id="@+id/action_navigation_recover_to_navigation_login"
            app:destination="@id/navigation_login" />
    </fragment>
    <fragment
        android:id="@+id/navigation_notes"
        android:name="com.camelloncase.assessment.ui.notes.NotesFragment"
        android:label="fragment_notes"
        tools:layout="@layout/fragment_notes" >
        <action
            android:id="@+id/action_notesFragment_to_managementNotesFragment"
            app:destination="@id/navigation_management_notes" />
        <action
            android:id="@+id/action_navigation_notes_to_navigation_login"
            app:destination="@id/navigation_login" />
    </fragment>
    <fragment
        android:id="@+id/navigation_management_notes"
        android:name="com.camelloncase.assessment.ui.notes.ManagementNotesFragment"
        android:label="fragment_management_notes"
        tools:layout="@layout/fragment_management_notes" >
        <argument
            android:name="actionType"
            android:defaultValue=""
            app:argType="string" />
        <argument
            android:name="id"
            android:defaultValue=""
            app:argType="int" />
        <argument
            android:name="noteTitle"
            android:defaultValue=""
            app:argType="string" />
        <argument
            android:name="noteDescription"
            android:defaultValue=""
            app:argType="string" />
        <argument
            android:name="timeStamp"
            android:defaultValue=""
            app:argType="string" />
        <action
            android:id="@+id/action_navigation_management_notes_to_navigation_notes"
            app:destination="@id/navigation_notes" />
    </fragment>

</navigation>
